# caper

./: .gitignore  .project  AST.hs  AliasingMap.hs  Assertions.hs  CNFParser2.hs  Caper.cabal  Choice.hs  DPLL2.hs  Environment.hs  Exceptions.hs  FOTest.hs  FirstOrder.hs  FloydWarshall.hs  FloydWashall.hs  GuardTests.hs  Guards.hs  Interpreter.hs  LICENSE  MemoIO.hs  NondetClasses.hs  PMaybe.hs  ParseCNF.hs  Parser.hs  PermTest.hs  Permissions.hs  Permissions2.hs  PermissionsE.hs  PermissionsI.hs  PermissionsInterface.hs  Prover.hs  ProverDatatypes.hs  ProverDatatypesUnitTests.hs  ProverUnitTests.hs  Provers.hs  README  README.md  ReadersWriters.t  RegionTypes.hs  Regions.hs  (+16 more)
Interpreter/: Interpreter.hs
Parser/: AST.hs  Parser.hs
Parser/AST/: Annotation.hs  Code.hs  SourcePos.hs
Tests/: DataTest.hs  FOTest.hs  GuardTests.hs  PermTest.hs  ProverUnitTests.hs  RunTests.hs  StabilityTests.hs  SymExTests.hs
Utils/: AliasingMap.hs  Choice.hs  MonadHoist.hs  NondetClasses.hs  SimilarStrings.hs
demo/: DemoTL.t  SpinLock0.t  SpinLock1.t  SpinLock1a.t  TicketLock0.t  TicketLock1.t
docs/: caper QM2016.pptm  caper.pptm  design.tex  symex.tex  thoughts.txt
docs/rems/: presentation.tex
etc/: caper.vim
etc/TextWrangler/: caper.plist
etc/vim/colors/: caper.vim
etc/vim/syntax/: caper.vim
examples/: BagStack.t  BagStack2.t  BinaryTree.t  BlockingCounter.t  BlockingCounterMess.t  BoundedCounter.t  CASCounter.t  CASLock.t  FletchQueue.t  ForkJoin.t  IncDec.t  Incr.t  Join.t  Paper.t  ParallelIncr.t  Queue.t  Queue2.t  Queue3.t  ReadWriteLock.t  ReadersWriters.t  Recursive.t  RecursiveSpinLock.t  SpinLock.t  SpinLockClient.t  TicketLock.t  TicketLockOld.t  test.t
examples/iterative/: BagStack.t  Barrier.t  BarrierClient.t  BlockingCounter.t  BoundedCounter.t  BoundedReadWriteLock.t  CASCounter.t  CounterClient.t  Factorial.t  ForkJoin.t  ForkJoinClient.t  IncDec.t  Join.t  Mediator.t  Queue.t  ReadWriteLock.t  ReadWriterLock.t  ReaderWriterLock.t  ReferenceCount.t  SpinLock.t  TicketLock.t  TicketLockClient.t
examples/recursive/: Bag.t  BagStack.t  Barrier.t  BarrierClient.t  BlockingCounter.t  BoundedCounter.t  BoundedReaderWriteLock.t  CASCounter.t  CounterClient.t  Factorial.t  ForkJoinClient.t  IncDec.t  Join.t  Mediator.t  Queue.t  ReadWriteLock.t  ReadWriterLock.t  ReaderWriterLock.t  ReferenceCount.t  SpinLock.t  Stack.t  TicketLock.t  TicketLockClient.t
executable/: Caper.hs
interpreter/: Interpreter.hs
interpreter/Caper/Interpreter/: Environment.hs
runtests/: cptest_001.t  cptest_002.t  cptest_003.t  cptest_004.t  cptest_005.t  cptest_006.t  cptest_007.t  cptest_008.t  cptest_009.t  cptest_010.t  cptest_011.t  cptest_012.t  test_001.t  test_002.t  test_003.t  test_004.t  test_005.t  test_006.t  test_007.t  test_008.t  test_009.t  test_010.t  test_011.t  test_012.t  test_013.t  test_014.t  test_015.t  test_016.t  test_017.t  test_018.t  test_019.t  test_020.t  test_021.t  test_022.t  test_023.t  test_024.t  test_025.t  test_026.t  test_027.t  test_028.t  (+160 more)
src/: Assertions.hs  Caper.hs  Exceptions.hs  Interpreter.hs  PermissionsE.hs  PermissionsI.hs  Presburger.hs  Prover.hs  ProverDatatypes.hs  Provers.hs  Transitions.hs  TypingContext.hs  ValueProver.hs  ValueProver2.hs  ba_prelude.tptp
src/Caper/: .#ProverDatatypes.hs  Assertions.hs  Constants.hs  Contexts.hs  DeclarationTyping.hs  DeductionFailure.hs  ExceptionContext.hs  Exceptions.hs  FirstOrder.hs  FirstOrderSorted.hs  FreeVariables.hs  Guards.hs  Logger.hs  PermissionsE.hs  PermissionsI.hs  PermissionsI2.hs  PermissionsSMT.hs  Predicates.hs  Procedures.hs  Proof.hs  ProofMonad.hs  Prover.hs  ProverDatatypes.hs  ProverStates.hs  Provers.hs  RegionInterpretations.hs  RegionTypes.hs  Regions.hs  StabilityCheck.hs  SymbolicExecution.hs  SymbolicState.hs  Transitions.hs  TransitivityCheck.hs  TypingContext.hs  ValueProver.hs  ValueProver2.hs
src/Caper/Assertions/: Check.hs  Consume.hs  Generate.hs  Produce.hs
src/Caper/Interpreter/: Environment.hs  Interpreter.hs
src/Caper/Parser/: AST.hs  Parser.hs
src/Caper/Parser/AST/: Annotation.hs  Code.hs  SourcePos.hs
src/Caper/Provers/Permissions/: E.hs  Internal.hs  SMT.hs
src/Caper/Provers/Values/: SBV.hs  Z3.hs  Z3plus.hs
src/Caper/Utils/: AliasingMap.hs  Alternating.hs  Choice.hs  Failure.hs  FastEq.hs  FloydWarshall.hs  LiteralFileQQ.hs  Logic.hs  MemoIO.hs  Mix.hs  MonadHoist.hs  NondetClasses.hs  PMaybe.hs  SimilarStrings.hs
src/Interpreter/: Environment.hs
src/Parser/: Parser.hs
src/Parser/AST/: Annotation.hs
src/Utils/: Choice.hs  FloydWarshall.hs  MemoIO.hs  PMaybe.hs
tasty-suite/: Main.hs
tasty-suite/Caper/: IntegrationTests.hs
tasty-suite/Caper/FirstOrder/: Tests.hs
testsuite/runtests/: RunTests.hs
testsuite/tests/: Infrastructure.hs  RegionTypes.hs  TestDeclarationTyping.hs  TestParser.hs  TestParserPrecedence.hs  TestStability.hs  TestValueAssertions.hs
