name:           Caper
version:        0.1.0.0
synopsis:       A tool for automatic program verification.
license-file:   LICENSE
author:         Thomas Dinsdale-Young, Pedro da Rocha Pinto
maintainer:     td202@d-y.me.uk
build-type:     Simple
cabal-version:  >= 1.8
data-files:     ba_prelude.tptp

flag z3ffi
  description:  Enable z3 invocation via FFI (requires z3 package)
  default:      True

executable Caper
  main-is:         Caper.hs
  build-depends:   base ==4.6.*, containers ==0.5.*, control-monad-exception ==0.11.*, mtl ==2.1.*, transformers ==0.3.*, parsec ==3.1.*, lens >=3.9, HUnit ==1.2.*, QuickCheck ==2.6.*, time ==1.4.*, syb ==0.4.*, sbv >=2.10, multiset ==0.2.*, ConfigFile ==1.1.*, parallel ==3.2.*, process ==1.1.*, SafeSemaphore >=0.9, directory ==1.2.*, either ==4.3.*, vector ==0.10.*, template-haskell ==2.8.*
  hs-source-dirs:  src

  if flag(z3ffi)
    build-depends:  z3 ==0.3.*
    cpp-options:    -Dz3ffi

executable Interpreter
  build-depends:   
                   base >= 4,
                   parsec >=3.1 && <3.2,
                   mtl >=2.1.2 && <2.2,
                   template-haskell >=2.8 && <2.9
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Interpreter.hs

