name:           Caper
version:        0.1.0.0
synopsis:       A tool for automatic program verification.
license-file:   LICENSE
author:         Thomas Dinsdale-Young, Pedro da Rocha Pinto
maintainer:     td202@d-y.me.uk
build-type:     Simple
cabal-version:  >= 1.8

flag z3ffi
  description:  Enable z3 invocation via FFI (requires z3 package)
  default:      True

executable Caper
  main-is:         Caper.hs
  build-depends:   
                   base >=4.6,
                   containers ==0.5.*,
                   control-monad-exception ==0.11.*,
                   mtl >=2.1,
                   transformers >=0.3,
                   parsec ==3.1.*,
                   lens >=3.9,
                   HUnit ==1.2.*,
                   QuickCheck >=2.8,
                   time >=1.4,
                   syb ==0.4.*,
                   sbv >=3.1,
                   multiset ==0.2.*,
                   ConfigFile ==1.1.*,
                   parallel ==3.2.*,
                   process >=1.2.0.0,
                   SafeSemaphore >=0.9,
                   directory ==1.2.*,
                   either ==4.3.*,
                   vector >=0.10,
                   template-haskell >=2.8,
                   transformers >=0.2,
                   argparser >=0.3.4,
                   int-cast
  hs-source-dirs:  src
  extensions:      CPP
  ghc-options:     -Wall -fno-warn-unused-matches -rtsopts -threaded
  other-modules:   
                   Caper.Assertions.Check,
                   Caper.Assertions.Consume,
                   Caper.Assertions.Generate,
                   Caper.Assertions.Produce,
                   Caper.Constants,
                   Caper.Contexts,
                   Caper.DeclarationTyping,
                   Caper.ExceptionContext,
                   Caper.Exceptions,
                   Caper.FirstOrder,
                   Caper.FreeVariables,
                   Caper.Guards,
                   Caper.Logger,
                   Caper.Parser.AST,
                   Caper.Parser.AST.Annotation,
                   Caper.Parser.AST.Code,
                   Caper.Parser.AST.SourcePos,
                   Caper.Parser.Parser,
                   Caper.Predicates,
                   Caper.Procedures,
                   Caper.Proof,
                   Caper.Prover,
                   Caper.ProverDatatypes,
                   Caper.ProverStates,
                   Caper.Provers,
                   Caper.Provers.Permissions.E,
                   Caper.Provers.Permissions.Internal,
                   Caper.Provers.Values.SBV,
                   Caper.RegionInterpretations,
                   Caper.RegionTypes,
                   Caper.Regions,
                   Caper.SymbolicExecution,
                   Caper.SymbolicState,
                   Caper.Transitions,
                   Caper.TypingContext,
                   Caper.Utils.AliasingMap,
                   Caper.Utils.Alternating,
                   Caper.Utils.Choice,
                   Caper.Utils.Failure,
                   Caper.Utils.FastEq,
                   Caper.Utils.FloydWarshall,
                   Caper.Utils.LiteralFileQQ,
                   Caper.Utils.MemoIO,
                   Caper.Utils.Mix,
                   Caper.Utils.MonadHoist,
                   Caper.Utils.NondetClasses,
                   Caper.Utils.PMaybe,
                   Caper.Utils.SimilarStrings,
                   Caper.DeductionFailure,
                   Caper.FirstOrderSorted

  if flag(z3ffi)
    build-depends:  z3 >=4.0.0
    cpp-options:    -Dz3ffi
    other-modules:  Caper.Provers.Values.Z3, Caper.Provers.Permissions.SMT, Caper.Provers.Values.Z3plus

  if impl(ghc >= 7.10)
     cpp-options:   -Doverlap_pragmas
     
executable Interpreter
  build-depends:   
                   base >= 4,
                   parsec >=3.1 && <3.2,
                   mtl >=2.1.2,
                   template-haskell >=2.8,
                   lens >=3.9,
                   containers >=0.5 && <0.6
  hs-source-dirs:  src
  ghc-options:     -W -rtsopts
  main-is:         Interpreter.hs
  other-modules:   
                   Caper.ExceptionContext,
                   Caper.FreeVariables,
                   Caper.Interpreter.Environment,
                   Caper.Interpreter.Interpreter,
                   Caper.Parser.AST,
                   Caper.Parser.AST.Annotation,
                   Caper.Parser.AST.Code,
                   Caper.Parser.AST.SourcePos,
                   Caper.Parser.Parser

executable RunTests
  build-depends:   
                   base >= 4,
                   template-haskell >=2.8,
                   directory >= 1.2,
                   text >= 1.1,
                   filepath >= 1.3,
                   shelly >= 1.6,
                   ansi-terminal >= 0.6,
                   containers >= 0.5
  hs-source-dirs:  Tests
  main-is:         RunTests.hs
