name:           caper
version:        0.1.0.0
synopsis:       A tool for automatic program verification.
license-file:   LICENSE
author:         Thomas Dinsdale-Young, Pedro da Rocha Pinto
maintainer:     td202@d-y.me.uk
build-type:     Simple                 
cabal-version:  >= 1.8
extra-source-files:
                runtests/*.t          

flag z3ffi
  description:  Enable z3 invocation via FFI (requires z3 package)
  default:      True

library
  build-depends:   
                   base >=4.6,
                   containers ==0.5.*,
                   control-monad-exception ==0.11.*,
                   mtl >=2.1,
                   transformers >=0.3,
                   parsec ==3.1.*,
                   lens >=3.9,
                   time >=1.4,
                   syb >=0.4,
                   sbv >=3.1,
                   multiset >=0.2,
                   ConfigFile ==1.1.*,
                   parallel ==3.2.*,
                   process >=1.2.0.0,
                   SafeSemaphore >=0.9,
                   directory >=1.2,
                   either >=4.3,
                   vector >=0.10,
                   template-haskell >=2.8,
                   transformers >=0.2,
                   int-cast
  hs-source-dirs:  src
  extensions:      CPP
  ghc-options:     -Wall -fno-warn-unused-matches -rtsopts -threaded
  exposed-modules: 
                   Caper.Assertions.Check,
                   Caper.Assertions.Consume,
                   Caper.Assertions.Generate,
                   Caper.Assertions.Produce,
                   Caper.Constants,
                   Caper.Contexts,
                   Caper.DeclarationTyping,
                   Caper.ExceptionContext,
                   Caper.Exceptions,
                   Caper.FirstOrder,
                   Caper.FreeVariables,
                   Caper.Guards,
                   Caper.Logger,
                   Caper.Parser.AST,
                   Caper.Parser.AST.Annotation,
                   Caper.Parser.AST.Code,
                   Caper.Parser.AST.SourcePos,
                   Caper.Parser.Parser,
                   Caper.Predicates,
                   Caper.Procedures,
                   Caper.Proof,
                   Caper.Prover,
                   Caper.ProverDatatypes,
                   Caper.ProverStates,
                   Caper.Provers,
                   Caper.Provers.Permissions.E,
                   Caper.Provers.Permissions.Internal,
                   Caper.Provers.Values.SBV,
                   Caper.RegionInterpretations,
                   Caper.RegionTypes,
                   Caper.Regions,
                   Caper.SymbolicExecution,
                   Caper.SymbolicState,
                   Caper.Transitions,
                   Caper.TypingContext,
                   Caper.Utils.AliasingMap,
                   Caper.Utils.Alternating,
                   Caper.Utils.Choice,
                   Caper.Utils.Failure,
                   Caper.Utils.FastEq,
                   Caper.Utils.FloydWarshall,
                   Caper.Utils.LiteralFileQQ,
                   Caper.Utils.MemoIO,
                   Caper.Utils.Mix,
                   Caper.Utils.MonadHoist,
                   Caper.Utils.NondetClasses,
                   Caper.Utils.PMaybe,
                   Caper.Utils.SimilarStrings,
                   Caper.DeductionFailure

  if flag(z3ffi)
    build-depends:  z3 >=4.0.0
    cpp-options:    -Dz3ffi
    other-modules:  Caper.Provers.Values.Z3, Caper.Provers.Permissions.SMT, Caper.Provers.Values.Z3plus

  if impl(ghc >= 7.10)
     cpp-options:   -Doverlap_pragmas
  if impl(ghc < 8.0)
    build-depends:  template-haskell <2.11

executable Caper
  hs-source-dirs:      executable
  main-is:             Caper.hs
  extensions:      CPP
  ghc-options:     -Wall -fno-warn-unused-matches -rtsopts -threaded
  build-depends:       base >= 4.6
                     , caper
                     , argparser >= 0.3.4
                     , mtl >= 2.2.1
                     

executable Interpreter
  build-depends:   
                   base >= 4,
                   caper,
                   parsec >=3.1 && <3.2,
                   mtl >=2.1.2,
                   template-haskell >=2.8,
                   lens >=3.9,
                   containers >=0.5 && <0.6
  hs-source-dirs:  interpreter
  ghc-options:     -W -rtsopts
  main-is:         Interpreter.hs
  if impl(ghc < 8.0)
    build-depends:  template-haskell <2.11
  other-modules:       Caper.Interpreter.Environment
                     , Caper.Interpreter.Interpreter

executable RunTests
  build-depends:   
                   base >= 4,
                   caper,
                   template-haskell >=2.8,
                   directory >= 1.2,
                   text >= 1.1,
                   filepath >= 1.3,
                   shelly >= 1.6,
                   ansi-terminal >= 0.6,
                   containers >= 0.5
  hs-source-dirs:  Tests
  main-is:         RunTests.hs
  if impl(ghc < 8.0)
    build-depends:  template-haskell <2.11

test-suite tasty-suite
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tasty-suite
  main-is:             Main.hs                                            
  build-depends:       base >= 4.6
                     , tasty                     
                     , tasty-quickcheck
                     , tasty-hunit
                     , HUnit
                     , QuickCheck
                     , caper
                     , containers
                     , time
                     , lens
                     , mtl
                     , parsec
                     , either
                     , directory
                     , filepath
                     , template-haskell
                     , process
                     , text